--- a/landscape.html
+++ b/landscape.html
@@ -19,43 +19,39 @@
             </div>
     </div>
             <div class="portfolio-grid">
-                <div class="container">
-                    <a href="landscape.html"><img class="p-img" src="https://i.imgur.com/k5R6TUF.jpg" alt="Avalanche Lake"></a>
+                 <div class="container">
+                    <a href="summer2017.html"><img class="p-img" src="https://i.imgur.com/2nvi3DR.jpg" alt="Long road with trees"></a>
                     <div class="middle">
-                        <div class="text">Landscape</div>
+                        <div class="text">Summer 2017</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="portrait.html"><img class="p-img" src="https://i.imgur.com/CicasAQ.jpg" alt="Mom holding baby"></a>
+                    <a href="alaska2018.html"><img class="p-img" src="https://i.imgur.com/9uiCAIM.jpg" alt="Grass with mountain in back"></a>
                     <div class="middle">
-                        <div class="text">Portraits</div>
+                        <div class="text">Alaska 2018</div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <a href="roadtrip.html"><img class="p-img" src="https://i.imgur.com/UQ5Q65T.jpg" alt="Welcome to Oregon sign"></a>
+                    <div class="middle">
+                        <div class="text">Road Trip 2018</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="animal.html"><img class="p-img" src="https://i.imgur.com/OUlKrXK.jpg" alt="Elk in field"></a>
+                    <a href="yosemite2019.html"><img class="p-img" src="https://i.imgur.com/03ciExm.jpg" alt="Yosemite valley"></a>
                     <div class="middle">
-                        <div class="text">Animals</div>
+                        <div class="text">Yosemite 2019</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="mountains.html"><img class="p-img" src="https://i.imgur.com/qTS36Cc.jpg" alt="Mount Rainier"></a>
+                    <a href="malabar.html"><img class="p-img" src="https://i.imgur.com/9D9dFFS.jpg" alt="Malabar national park"></a>
                     <div class="middle">
-                        <div class="text">Mountains</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <a href="waters.html"><img class="p-img" src="https://i.imgur.com/h1JVBUs.jpg" alt="Beach with forest in back"></a>
-                    <div class="middle">
-                        <div class="text">Water</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <a href="misc.html"><img class="p-img" src="https://i.imgur.com/6wRMGlz.jpg" alt="Half Dome"></a>
-                    <div class="middle">
-                        <div class="text">Miscellaneous</div>
+                        <div class="text">Malabar National Park 2019</div>
                     </div>
                 </div>
             </div>
+
             <footer></footer>
         </body>
 </div>
