--- a/portrait.html
+++ b/portrait.html
@@ -19,43 +19,44 @@
             </div>
     </div>
             <div class="portfolio-grid">
-                <div class="container">
-                    <a href="landscape.html"><img class="p-img" src="https://i.imgur.com/k5R6TUF.jpg" alt="Avalanche Lake"></a>
+                 <div class="container">
+                    <a href="teddys-first.html"><img class="p-img" src="https://i.imgur.com/cHKzPIj.jpg" alt="Mom holding baby"></a>
                     <div class="middle">
-                        <div class="text">Landscape</div>
+                        <div class="text">Teddy's First Birthday</div>
+                    </div>
+                </div>
+                 <div class="container">
+                    <a href="teddys-1.5.html"><img class="p-img" src="https://i.imgur.com/ajMRTxz.jpg" alt="Mom kissing baby"></a>
+                    <div class="middle">
+                        <div class="text">Teddy's Year and a Half</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="portrait.html"><img class="p-img" src="https://i.imgur.com/CicasAQ.jpg" alt="Mom holding baby"></a>
+                    <a href="beach-maternity.html"><img class="p-img" src="https://i.imgur.com/2DNncf9.jpg" alt="Pregnant mom at the beach"></a>
                     <div class="middle">
-                        <div class="text">Portraits</div>
+                        <div class="text">Beach Maternity</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="animal.html"><img class="p-img" src="https://i.imgur.com/OUlKrXK.jpg" alt="Elk in field"></a>
+                    <a href="snow-maternity.html"><img class="p-img" src="https://i.imgur.com/5U5T0KD.jpg" alt="Pregnant mom in the woods"></a>
                     <div class="middle">
-                        <div class="text">Animals</div>
+                        <div class="text">Snow Maternity</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="mountains.html"><img class="p-img" src="https://i.imgur.com/qTS36Cc.jpg" alt="Mount Rainier"></a>
+                    <a href="rio-3-months.html"><img class="p-img" src="https://i.imgur.com/Hp5HGw2.jpg" alt="Family photo"></a>
                     <div class="middle">
-                        <div class="text">Mountains</div>
+                        <div class="text">Rio's Three Months</div>
                     </div>
                 </div>
                 <div class="container">
-                    <a href="waters.html"><img class="p-img" src="https://i.imgur.com/h1JVBUs.jpg" alt="Beach with forest in back"></a>
+                    <a href="rio-8-months.html"><img class="p-img" src="https://i.imgur.com/cZQXjh8.jpg" alt="Mom holding infant"></a>
                     <div class="middle">
-                        <div class="text">Water</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <a href="misc.html"><img class="p-img" src="https://i.imgur.com/6wRMGlz.jpg" alt="Half Dome"></a>
-                    <div class="middle">
-                        <div class="text">Miscellaneous</div>
+                        <div class="text">Rio's Eight Months</div>
                     </div>
                 </div>
             </div>
+
             <footer></footer>
         </body>
 </div>
