--- a/about.html
+++ b/about.html
@@ -6,18 +6,27 @@
         <link href="main.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div id="headers">
+        <div id="about-header">
             <h2><a href="index.html">Everett McIntire Photography</a></h2>
         </div>
-        <div id="top-nav">
+        <div class="nav">
             <ul>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a> </li>
             </ul>
         </div>
-
-
+        <div class="about-grid">
+            <div class="c1">
+                hi
+            </div>
+            <div class="c2">
+                hey
+            </div>
+            <div class="c3">
+                helo
+            </div>
+        </div>
         <footer></footer>
     </body>
 </html>
