--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,13 @@
         <div id="contact-header">
             <h2><a href="index.html">Everett McIntire Photography</a></h2>
         </div>
-        <div id="contact-nav">
+        <div class="nav">
             <ul>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a> </li>
             </ul>
         </div>
-
-
         <footer></footer>
     </body>
 </html>
