--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <div id="contact-header">
             <h2><a href="index.html">Everett McIntire Photography</a></h2>
         </div>
-        <div class="nav">
+        <div id="contact-nav">
             <ul>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
