--- a/about.html
+++ b/about.html
@@ -6,27 +6,17 @@
         <link href="main.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div id="about-header">
+        <div id="contact-header">
             <h2><a href="index.html">Everett McIntire Photography</a></h2>
         </div>
-        <div class="nav">
+        <div id="contact-nav">
             <ul>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a> </li>
             </ul>
         </div>
-        <div class="about-grid">
-            <div class="c1">
-                hi
-            </div>
-            <div class="c2">
-                hey
-            </div>
-            <div class="c3">
-                helo
-            </div>
-        </div>
+        
         <footer></footer>
     </body>
 </html>
