--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,15 @@
         </div>
         <div id="contact-nav">
             <ul>
-                <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a> </li>
             </ul>
+        </div>
+        <div id="contact-grid">
+            <div id="c-text">
+                email: everettgsm@gmail.com
+            </div>
         </div>
         <footer></footer>
     </body>
