--- a/about.html
+++ b/about.html
@@ -16,6 +16,15 @@
                 <li><a href="about.html">About</a> </li>
             </ul>
         </div>
+        <div id="about-grid">
+            <div id="a-text">
+                ev
+            </div>
+            <img src="https://i.imgur.com/F6faSNH.jpg" alt="Golden gate bridge">
+            <div id="a-text">
+                ev
+            </div>
+        </div>
         
         <footer></footer>
     </body>
