--- a/about.html
+++ b/about.html
@@ -18,12 +18,10 @@
         </div>
         <div id="about-grid">
             <div id="a-text">
-                ev
+                hey my name is ev and I take photos sometimes
             </div>
-            <img src="https://i.imgur.com/F6faSNH.jpg" alt="Golden gate bridge">
-            <div id="a-text">
-                ev
-            </div>
+            <img src="https://i.imgur.com/VfOvzxJ.jpg" alt="El Capitan">
+            
         </div>
         
         <footer></footer>
